// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1- default state 1`] = `null`;

exports[`1- fetched 1`] = `
Object {
  "title": "bitcoin",
}
`;

exports[`2- reset 1`] = `null`;

exports[`3- fetched 1`] = `
Object {
  "title": "photography",
}
`;
